# bash-hello-world-with-locales

./: README.md
Docs/DRAFT/: README.md
PACKAGE-SOURCE/: ChangeLog  Makefile.am  configure.ac
PACKAGE-SOURCE/data/: Makefile.am  en-locale.in  ru-locale.in
PACKAGE-SOURCE/run/: Makefile.am  default.locale
