#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([HelloWorld-withlocales], [1.0.0_alpha], [yudenisov@mail.ru])

# Checks for programs.

AM_INIT_AUTOMAKE
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 bin/Makefile])
AC_OUTPUT
